--- a/client/BUILD.bazel
+++ b/client/BUILD.bazel
@@ -1,11 +1,18 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_binary(
-  name = "greeter_client",
-  srcs = ["main.go"],
-  deps = [
-    "//examples/helloworld:helloworld_go_proto",
-    "@org_golang_x_net//context:go_default_library",
-    "@org_golang_google_grpc//:go_default_library",
-  ],
+    name = "greeter_client",
+    embed = [":client_lib"],
+    visibility = ["//visibility:public"],
+)
+
+go_library(
+    name = "client_lib",
+    srcs = ["main.go"],
+    importpath = "github.com/bazelbuild/rules_go/examples/basic-gazelle/client",
+    visibility = ["//visibility:private"],
+    deps = [
+        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_x_net//context:go_default_library",
+    ],
 )
