--- a/proto/hello_world/BUILD.bazel
+++ b/proto/hello_world/BUILD.bazel
@@ -1,15 +1,24 @@
+load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
     name = "helloworld_proto",
-    srcs = ["helloworld.proto"],
+    srcs = ["hello_world.proto"],
     visibility = ["//visibility:public"],
 )
 
 go_proto_library(
     name = "helloworld_go_proto",
-    compiler = "@io_bazel_rules_go//proto:go_grpc",
-    importpath = "github.com/si-you/go-grpc-example/examples/helloworld",
+    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
+    importpath = "github.com/bazelbuild/rules_go/examples/basic-gazelle/proto/hello_world",
     proto = ":helloworld_proto",
+    visibility = ["//visibility:public"],
+)
+
+go_library(
+    name = "hello_world",
+    embed = [":helloworld_go_proto"],
+    importpath = "github.com/bazelbuild/rules_go/examples/basic-gazelle/proto/hello_world",
     visibility = ["//visibility:public"],
 )
