--- a/server/BUILD.bazel
+++ b/server/BUILD.bazel
@@ -1,12 +1,19 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_binary(
-  name = "greeter_server",
-  srcs = ["main.go"],
-  deps = [
-    "//examples/helloworld:helloworld_go_proto",
-    "@org_golang_x_net//context:go_default_library",
-    "@org_golang_google_grpc//:go_default_library",
-    "@org_golang_google_grpc//reflection:go_default_library",
-  ],
-  )
+    name = "greeter_server",
+    embed = [":server_lib"],
+    visibility = ["//visibility:public"],
+)
+
+go_library(
+    name = "server_lib",
+    srcs = ["main.go"],
+    importpath = "github.com/bazelbuild/rules_go/examples/basic-gazelle/server",
+    visibility = ["//visibility:private"],
+    deps = [
+        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//reflection:go_default_library",
+        "@org_golang_x_net//context:go_default_library",
+    ],
+)
