--- a/client/BUILD.bazel
+++ b/client/BUILD.bazel
@@ -1,18 +1,20 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@rules_go//go:def.bzl", "go_binary", "go_library")
+
+package(default_visibility = ["//visibility:public"])
+
+go_library(
+    name = "go_default_library",
+    srcs = ["main.go"],
+    importpath = "github.com/abitofhelp/client",
+    deps = [
+        "//proto/hello_world:hello_world_go_proto",
+        #"//proto/hello_world:go_default_library"
+    ],
+)
 
 go_binary(
     name = "greeter_client",
-    embed = [":client_lib"],
-    visibility = ["//visibility:public"],
-)
-
-go_library(
-    name = "client_lib",
-    srcs = ["main.go"],
-    importpath = "github.com/bazelbuild/rules_go/examples/basic-gazelle/client",
-    visibility = ["//visibility:private"],
-    deps = [
-        "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_x_net//context:go_default_library",
-    ],
+    embed = [":go_default_library"],
+    goos = "linux",
+    goarch = "amd64",
 )
