--- a/server/BUILD.bazel
+++ b/server/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/abitofhelp/bazel7_go_grpc/server",
     deps = [
+        "//proto/hello_world:hello_world_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//reflection:go_default_library",
     ],
