--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,4 +1,3 @@
-load("@rules_go//go:def.bzl", "go_binary", "go_library")
 load("@gazelle//:def.bzl", "gazelle")  #
 #load("@buildifier_prebuilt//:rules.bzl", "buildifier")
 
@@ -10,15 +9,5 @@ load("@gazelle//:def.bzl", "gazelle")  #
 # gazelle:exclude vendor
 gazelle(name = "gazelle")
 
-go_library(
-    name = "go_default_library",
-    srcs = ["main.go"],
-    importpath = "github/abitofhelp/bazel7_go_grpc",
-    visibility = ["//visibility:private"],
-)
-
-go_binary(
-    name = "bazel7_go_grpc",
-    embed = [":go_default_library"],
-    visibility = ["//visibility:public"],
-)
+# make sure that others can import either using the import or go_default_library naming conventions
+# gazelle:go_naming_convention import_alias
