--- a/server/BUILD.bazel
+++ b/server/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//proto/hello_world:hello_world_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//reflection:go_default_library",
+        "@org_uber_go_zap//:zap",
     ],
 )
 
