--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -10,7 +10,7 @@ bazel_dep(name = "rules_go", version = "0.43.0", dev_dependency = True)
 bazel_dep(name = "rules_proto", version = "6.0.0-rc1", dev_dependency = True)
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-go_sdk.download(version = "1.21")
+go_sdk.download(version = "1.21.4")
 
 # Register the Go SDK installed on the host.
 go_sdk.host()
@@ -25,4 +25,5 @@ use_repo(
     "org_golang_google_genproto_googleapis_api",
     "org_golang_google_grpc",
     "org_golang_google_protobuf",
+    "org_uber_go_zap",
 )
