--- a/client/BUILD.bazel
+++ b/client/BUILD.bazel
@@ -3,18 +3,24 @@ load("@rules_go//go:def.bzl", "go_binary", "go_library")
 package(default_visibility = ["//visibility:public"])
 
 go_library(
-    name = "go_default_library",
+    name = "client_lib",
     srcs = ["main.go"],
     importpath = "github.com/abitofhelp/bazel7_go_grpc/client",
     deps = [
         "//proto/hello_world:hello_world_go_proto",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_uber_go_zap//:zap",
     ],
+)
+
+alias(
+    name = "go_default_library",
+    actual = ":client_lib",
 )
 
 go_binary(
     name = "greeter_client",
-    embed = [":go_default_library"],
+    embed = [":client_lib"],
     goarch = "amd64",
     goos = "linux",
 )
