--- a/server/BUILD.bazel
+++ b/server/BUILD.bazel
@@ -3,7 +3,7 @@ load("@rules_go//go:def.bzl", "go_binary", "go_library")
 package(default_visibility = ["//visibility:public"])
 
 go_library(
-    name = "go_default_library",
+    name = "server_lib",
     srcs = ["main.go"],
     importpath = "github.com/abitofhelp/bazel7_go_grpc/server",
     deps = [
@@ -14,9 +14,14 @@ go_library(
     ],
 )
 
+alias(
+    name = "go_default_library",
+    actual = ":server_lib",
+)
+
 go_binary(
     name = "greeter_server",
-    embed = [":go_default_library"],
+    embed = [":server_lib"],
     goarch = "amd64",
     goos = "linux",
 )
