wip: rules_proto_grpc

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@gazelle//:def.bzl", "gazelle")  #
-#load("@buildifier_prebuilt//:rules.bzl", "buildifier")
+load("@buildifier_prebuilt//:rules.bzl", "buildifier")
 
 # gazelle:exclude bazel-*
 # gazelle:exclude binding
@@ -11,3 +11,16 @@ gazelle(name = "gazelle")
 
 # make sure that others can import either using the import or go_default_library naming conventions
 # gazelle:go_naming_convention import_alias
+
+buildifier(
+    name = "buildifier.check",
+    exclude_patterns = [
+        "./bazel-*",
+        "./git/*",
+        "./vendor/*",
+    ],
+    lint_mode = "warn",
+    lint_warnings = ["all"],
+    mode = "check",
+    verbose = True,
+)
